welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: type mismatch;
 found   : Unit
 required: Int
if (a >= 13 && a <= 19) {
^